Fix end of placeholder text getting cut off

--- a/style_intro.css
+++ b/style_intro.css
@@ -71,6 +71,7 @@
     border-radius: 14px;
     outline: rgba(255, 0, 0, 0.549) solid 2px;
     font-family: Ubuntu;
+    min-width: 20%;
 }
 
 #lbPassword {
